# QuranMp3Download

./: README.md  main.py  pyproject.toml
