[tool.poetry]
name = "quranmp3download"
version = "0.1.0"
description = ""
authors = ["GoldyTech <afzal.qureshi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
aiohttp = "^3.9.3"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
